--- a/panthers.yaml
+++ b/panthers.yaml
@@ -2,14 +2,11 @@ team: Panthers
 
 manager: Sebastian
 
-<<<<<<< HEAD
 coach: Shirley
-=======
-coach: Raymond
->>>>>>> 473145f (Edit Panthers)
 
 members:
   - Violet
   - Stella
   - Anthony
   - Freddie
+  - Evie
